--- a/Parfume/Views/Home/HistoryDetails.cshtml
+++ b/Parfume/Views/Home/HistoryDetails.cshtml
@@ -69,14 +69,18 @@
     <div class="row text-center">
         <div class="col-2 mt-3">
             <label class="labelColor">Satıcının adı</label>
+            <input type="text" readonly class="form-control  text-center  " value="@Model.Seller.Name " />
+        </div>
+        <div class="col-2 mt-3">
+            <label class="labelColor">Daxil edenin adı</label>
             <input type="text" readonly class="form-control  text-center  " value="@Model.User.Name " />
         </div>
         <div class="col-2 mt-3">
-            <label class="labelColor">Satıcının soyadı</label>
+            <label class="labelColor">Daxil edenin soyadı</label>
             <input type="text" readonly class="form-control  text-center  " value="@Model.User.Surname" />
         </div>
         <div class="col-2 mt-3">
-            <label class="labelColor">Satıcının fin kodu</label>
+            <label class="labelColor">Daxil edenin fin kodu</label>
             <input type="text" readonly class="form-control  text-center  " value="@Model.User.Fincode" />
         </div>
         <div class="col-2 mt-3">
@@ -99,10 +103,7 @@
             <label class="labelColor">Qiyməti</label>
             <input type="text" readonly class="form-control text-center  " value="@Model.Price" />
         </div>
-        <div class="col-2 mt-3">
-            <label class="labelColor">Bonusdan cixilan</label>
-            <input type="text" readonly class="form-control text-center  " value="@Model.BonusPrice" />
-        </div>
+
         @if (User.IsInRole("Admin"))
         {
             <div class="col-2 mt-3">
@@ -128,13 +129,22 @@
             <input type="text" readonly class="form-control  text-center  " value="@Model.FirstPrice" />
         </div>
         <div class="col-2 mt-3">
-            <label class="labelColor">Ödəniş tarixi</label>
-            <input type="text" readonly class="form-control text-center  " value="@Model.PaymentDate?.ToString("dd/MM/yyyy")" />
+            <label class="labelColor">Bonusdan cixilan</label>
+            <input type="text" readonly class="form-control text-center  " value="@Model.BonusPrice" />
+        </div>
+        <div class="col-2 mt-3">
+            <label class="labelColor">Bonus kartdan cixilan</label>
+            <input type="text" readonly class="form-control text-center  " value="@Model.BonusCardAmount" />
         </div>
         <div class="col-2 mt-3">
             <label class="labelColor">Borc</label>
             <input type="text" readonly class="form-control  text-center  " value="@Model.Debt" />
         </div>
+        <div class="col-2 mt-3">
+            <label class="labelColor">Ödəniş tarixi</label>
+            <input type="text" readonly class="form-control text-center  " value="@Model.PaymentDate?.ToString("dd/MM/yyyy")" />
+        </div>
+
         <div class="col-3 mt-3">
             <label class="labelColor">Kart adi</label>
             <input type="text" readonly class="form-control  text-center  " value="@Model.Card?.Name" />
