--- a/Parfume/Views/Home/SaleCash.cshtml
+++ b/Parfume/Views/Home/SaleCash.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<Parfume.Models.Bonus>
-    
+﻿@model Parfume.Models.SaleModel
+
+
 @{
     ViewData["Title"] = "SaleCash";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -42,15 +43,26 @@
             <select class="form-control hasBonus ">
                 <option value="true">Bəli</option>
                 <option value="false">Xeyr</option>
-                </select>
+            </select>
         </div>
         <div hidden class="col-3 mt-3">
             <label class="labelColor">Bonus kime verilir</label>
             <select class="form-control references ">
                 <option value="0">Sec</option>
-                @foreach (var item in Model)
+                @foreach (var item in Model.Customers)
                 {
-                    <option value="@item.Customer.Id">@item.Customer.Name @item.Customer.Surname  (@item.Customer.BonusAmount bonus)</option>
+                    <option value="@item.Id">@item.Name @item.Surname  (@item.BonusAmount bonus)</option>
+
+                }
+            </select>
+        </div>
+        <div   class="col-3 mt-3">
+            <label class="labelColor">Satıçı</label>
+            <select class="form-control sellers ">
+                <option value="0">Sec</option>
+                @foreach (var item in Model.Sellers)
+                {
+                    <option value="@item.Id">@item.Name </option>
 
                 }
             </select>
@@ -88,6 +100,15 @@
         <div class="col-3 mt-3">
             <label class="labelColor">Bonusdan ödəniş</label>
             <input type="number" class="form-control bonusPrice " />
+        </div>
+        <div class="col-3 mt-3">
+            <label class="labelColor">Bonus kartdan secim</label>
+            <select class="bonusCard-Directly" style="width: 100% !important;" id="bonusCardDirectly"></select>
+        </div>
+        <input class="bonusCardId" hidden />
+        <div class="col-3 mt-3">
+            <label class="labelColor">Bonus kartdan ödəniş miqdari</label>
+            <input type="number" class="form-control bonusCardAmount" />
         </div>
         <div class="col-3 mt-3">
             <label class="labelColor">Maya dəyəri</label>
