--- a/Parfume/Views/Home/SaleCredite.cshtml
+++ b/Parfume/Views/Home/SaleCredite.cshtml
@@ -167,12 +167,12 @@
             <input type="text" readonly class="form-control monthlyPayment " />
         </div>
         <div class="col-3 mt-3">
-            <label class="labelColor">Bonus kartdan secim</label>
+            <label class="labelColor">Hədiyyə kartdan secim</label>
             <select class="bonusCard-Directly" style="width: 100% !important;" id="bonusCardDirectly"></select>
         </div>
         <input class="bonusCardId" hidden />
         <div class="col-3 mt-3">
-            <label class="labelColor">Bonus kartdan ödəniş miqdari</label>
+            <label class="labelColor">Hədiyyə kartdan ödəniş miqdari</label>
             <input type="number" class="form-control bonusCardAmount" />
         </div>
         <div class="col-3 mt-3">
