--- a/Parfume/Views/Shared/_Layout.cshtml
+++ b/Parfume/Views/Shared/_Layout.cshtml
@@ -256,13 +256,13 @@
 
                         <li class="">
                             <a href="#BonusCardInfo" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle menu collapsed">
-                                <i class="fas fa-money-check-alt"></i> Bonus Kart
+                                <i class="fas fa-money-check-alt"></i> Hədiyyə Kart
                             </a>
                             <ul class="collapse list-unstyled" id="BonusCardInfo">
                                 <li>
                                     <a asp-controller="BonusCard" asp-action="Index">
                                         <i class="fas fa-money-bill"></i>
-                                        Bonus Kart
+                                        Hədiyyə Kart
                                     </a>
                                 </li>
                                 <li>
