--- a/Parfume/Views/Shared/_PartialTableSeller.cshtml
+++ b/Parfume/Views/Shared/_PartialTableSeller.cshtml
@@ -2,9 +2,9 @@
 
 @if (Model.Count != 0)
 {
-    <div class="row mt-5">
+    <div class="row mt-5 orderCount">
         <div class="col-6 offset-3">
-            <label class="col-form-label">Satiş sayı</label>
+            <label class="col-form-label ">Satiş sayı</label>
             <input style=" width: 70px;" class=" form-control CachOrder" value="@Model.Count" />
         </div>
     </div>
